[package]
name = "simple_http_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
rquest = { version = "1.3.2", features = ["cookies", "websocket"] }
parking_lot = "0.12"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
rcgen = "0.11"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
webpki = "0.22"
x509-parser = "0.15"
time = "0.3"
getrandom = { version = "0.2", features = ["std"] }
httparse = "1.8"
moka = { version = "0.12", features = ["sync"] }
bytes = "1.5"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
boring2 = "4.1"
url = "2.4"
rand = "0.8"
